--- a/notebooks/mnist.ipynb
+++ b/notebooks/mnist.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
