--- a/notebooks/simple_logging.ipynb
+++ b/notebooks/simple_logging.ipynb
@@ -959,7 +959,7 @@
    },
    "outputs": [],
    "source": [
-    "line_plot = tw.Visualizer(st_rsum, vis_type='line', host=line_plot, ytitle='rsum')"
+    "line_plot2 = tw.Visualizer(st_rsum, vis_type='line', host=line_plot, ytitle='rsum')"
    ]
   },
   {
