Docs for fruits notebook

--- a/notebooks/data_exploration.ipynb
+++ b/notebooks/data_exploration.ipynb
@@ -14,10 +14,14 @@
    "metadata": {},
    "source": [
     "## Installing regim\n",
-    "This tutorial will use small Python package called `regim`. It has few utility classes to quickly work with PyTorch datasets. To install regim, simply run:\n",
+    "This tutorial will use small Python package called `regim`. It has few utility classes to quickly work with PyTorch datasets. \n",
+    "\n",
+    "To install regim, clone repo from Github and do local package install:\n",
     "\n",
     "```\n",
-    "pip install regim\n",
+    "git clone https://github.com/sytelus/regim.git\n",
+    "cd regim\n",
+    "pip install -e .\n",
     "```\n",
     "\n",
     "Now we are done with that, let's do our imports:"
@@ -138,7 +142,7 @@
    "source": [
     "## Questions?\n",
     "\n",
-    "File a [Github issue](https://github.com/microsoft/tensorwatch/issues/new) and let us know if we can improve this tutorial."
+    "Please file a [Github issue](https://github.com/microsoft/tensorwatch/issues/new) and let us know if we can improve this tutorial."
    ]
   }
  ],
