Add folders for data in parameters explicit

--- a/notebooks/fruits_analysis.ipynb
+++ b/notebooks/fruits_analysis.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "```\n",
     "cd fruits\n",
-    "python fruits_main.py\n",
+    "python fruits_main.py --train-root /datasets/fruits-360/Training --test-root /datasets/fruits-360/Test\n",
     "```\n",
     "\n",
     "In next sections, we are going to send queries to this training process and visualize its data as the training progresses, all from within this Jupyter Notebook!"
