Docs for mnist notebook

--- a/notebooks/fruits_analysis.ipynb
+++ b/notebooks/fruits_analysis.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Using TensorWatch for Deep Learning Training (Food360)\n",
     "\n",
-    "This tutorial will show you how to use some of the advanced features of TensorWatch. These features are powerful but requires some time to get used to. Once you understand how everything works, you can go much beyond simple logging. You can in fact, interactively query yout live running machine learning process for information you need without having to log all the data beforehand!"
+    "This tutorial will show how to use some of the advanced features of TensorWatch. These features are powerful but requires some time to get used to. Once you understand how everything works, you can go much beyond simple logging. You can in fact, interactively query your live running machine learning process for information you need without having to log all the data beforehand!"
    ]
   },
   {
@@ -23,6 +23,7 @@
    "metadata": {},
    "source": [
     "## Installing regim\n",
+    "\n",
     "This tutorial will use small Python package called [regim](https://github.com/sytelus/regim). It allows you to take PyTorch model file and run training and test epochs on your specified dataset with small amount of code. Regim is already integrated with TensorWatch so you can easily examine how it uses TensorWatch (we'll explain this here as well).\n",
     "\n",
     "To install regim, clone repo from Github and do editable package install:\n",
@@ -52,7 +53,7 @@
    "source": [
     "## Basic Concepts\n",
     "\n",
-    "There are two core classes in TensorWatch: `Watcher` and `WatcherClient`. The `Watcher` allows you to create TensorWatch streams and opens up sockets to listen to any incoming requests for those streams. Your ML training script will probably create few streams and write any metrics of interest to it. The `WatcherClient` can be running on same or different machine, it connects to the `Watcher`, requests these streams and feeds them to visualizers.\n",
+    "There are two core classes in TensorWatch: `Watcher` and `WatcherClient`. The `Watcher` allows you to create TensorWatch streams and it listen to any incoming requests from anyone to get those streams. Your ML training script will probably create few streams and write any metrics of interest to it. The `WatcherClient` can be running on same or different machine, it connects to the `Watcher`, requests these streams and feeds them to visualizers.\n",
     "\n",
     "In this tutorial we will be using an advanced feature of TensorWatch that we call Lazy Logging Mode. In this mode, we don't actually log any data beforehand. Instead we ask `Watcher` to *observe* variables we have and then we send Python lambda expressions from `WatcherClient` that executes in the context of these variables. If you are not familier with this mode, we highly recommand to check out the [tutorial](https://github.com/microsoft/tensorwatch/blob/master/docs/lazy_logging.md)."
    ]
@@ -63,14 +64,14 @@
    "source": [
     "## Running the Code\n",
     "\n",
-    "Start the training script from the directory where you have installed `regim` package in your console window:\n",
+    "Start the training script from the directory where you have installed `regim` package from your console window:\n",
     "\n",
     "```\n",
     "cd fruits\n",
     "python fruits_main.py --train-root /datasets/fruits-360/Training --test-root /datasets/fruits-360/Test\n",
     "```\n",
     "\n",
-    "In next sections, we are going to send queries to this training process and visualize its data as the training progresses, all from within this Jupyter Notebook!"
+    "In next sections, we are going to send queries to this training process and visualize its data while the training progresses in real-time, all from within this Jupyter Notebook!"
    ]
   },
   {
@@ -79,7 +80,7 @@
    "source": [
     "## Managing Train and Test\n",
     "\n",
-    "The `regim` package allows us to use train dataset to train a model over epochs, maintain few metrics and make callbacks on events. After each epoch, it can run model on test dataset and maintain metrics on it as well. It maintains separate `Watcher` for train and test cycles so we can see metrics for each separately. The `port` parameter specifies offet to a [baseline port](https://github.com/microsoft/tensorwatch/blob/master/tensorwatch/lv_types.py#L162) for each `Watcher` instance for its socket."
+    "The `regim` package allows us to use train dataset to train a model over epochs, maintain few metrics and make callbacks on events. After each epoch, it can run the trained model so far on the test dataset and maintain metrics on it as well. It maintains separate `Watcher` for train and test cycles so we can see metrics for each separately. The `port` parameter specifies offet to the [baseline port](https://github.com/microsoft/tensorwatch/blob/master/tensorwatch/lv_types.py#L162) for its socket."
    ]
   },
   {
@@ -962,7 +963,7 @@
    "source": [
     "## Ploting Weight Gradients\n",
     "\n",
-    "Let's do something more interesting. How about plotting average of gradients in each layer? For this we use handly function `grads_abs_mean` that takes model as input and returns gradients averaged for each layer after each batch. We instruct TensorWatch to execute our lambda expression on event named `batch` using `event_name` parameter (other available event is `epoch`). TensorWatch provides [grads_abs_mean](https://github.com/microsoft/tensorwatch/blob/master/tensorwatch/evaler_utils.py#L190) and other utility functions that you can use in Python lambda experessions in [evaler_utils](https://github.com/microsoft/tensorwatch/blob/master/tensorwatch/evaler_utils.py) module. You can also use any functions from built-in Python packages such as `itertools`. As this computation is expensive we limit frequency to one per second using `throttle=1`. Also notice `history_len=20` parameter for `Visualizer` which instructs to maintain past 20 line plots as history, each one dimmed a little bit."
+    "Let's do something more interesting. How about plotting average of gradients in each layer? For this we use handly function `grads_abs_mean` that takes model as input and returns gradients averaged for each layer after each batch. We instruct TensorWatch to execute our lambda expression on event named `batch` using `event_name` parameter (other available event is `epoch`). TensorWatch provides [grads_abs_mean](https://github.com/microsoft/tensorwatch/blob/master/tensorwatch/evaler_utils.py#L190) and other utility functions in [evaler_utils](https://github.com/microsoft/tensorwatch/blob/master/tensorwatch/evaler_utils.py) module that you can use in your Python lambda experessions. You can also use any functions from built-in Python packages such as `itertools`. As this computation is expensive we limit frequency to one per second using `throttle=1`. Also notice `history_len=20` parameter for `Visualizer` which instructs to maintain past 20 line plots as history, each one dimmed a little bit as it gets older."
    ]
   },
   {
@@ -4263,7 +4264,7 @@
    "source": [
     " ## Plotting Input and Output Images in Real-time\n",
     " \n",
-    " Would you like to view some predictions as your training is progressing? How about looking at randomly sampled two (input, output) pairs every second? As we are training autoencoder, the input as well as output are image tensors. As the model gets better over epoch, you would expect output images looking similar to  input images, although they would start out very noisy at first. TensorWatch provides hanfly [topk_all](https://github.com/microsoft/tensorwatch/blob/master/tensorwatch/evaler_utils.py#L119) function that can help us achieve this. The `topk_all` function accepts lambda that should return the tuple `(losses, (inputs, outputs))` for a given batch. It's `order` function specifies if we should sort `asc`, `dsc` or `rnd` for ascendind, descending or random. The `k=2` parameter instructs to chose top two items. The result is two (input, output) pair of images with loss as its label."
+    "Would you like to view some predictions as your training is progressing? How about looking at two randomly sampled (input, output) pairs every second? As we are training autoencoder, the input as well as output are image tensors. As the model gets better over epoch, you would expect output images looking similar to  input images, although they would start out very noisy at first. TensorWatch provides handy [topk_all](https://github.com/microsoft/tensorwatch/blob/master/tensorwatch/evaler_utils.py#L119) function that can help us achieve this. The `topk_all` function accepts lambda that should return the tuple `(losses, (inputs, outputs))` for a given batch. It's `order` function specifies if we should sort `asc`, `dsc` or `rnd` for ascendind, descending or random. The `k=2` parameter instructs to chose top two items. The result is two (input, output) pair of images with loss as its label."
    ]
   },
   {
