added python ver

--- a/test/visualizations/plotly_lines.ipynb
+++ b/test/visualizations/plotly_lines.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c61f3635fe649f0ae566f28319fc4b3",
+       "model_id": "a6f93b0688da4024b5ff4138716925ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -24,10 +24,23 @@
    ],
    "source": [
     "import tensorwatch as tw\n",
+    "from tensorwatch.plotly.line_plot import LinePlot\n",
     "\n",
-    "stream = tw.ArrayStream([(i, i*i) for i in range(50)])\n",
-    "img_plot = tw.Visualizer(stream, vis_type='plotly-line', viz_img_scale=3, xtitle='Epochs', ytitle='Gain', draw_marker=True)\n",
-    "img_plot.show()"
+    "stream = tw.ArrayStream([(i, i*i) for i in range(50)], stream_name='test1' )\n",
+    "stream2 = tw.ArrayStream([(i, i*i*0.5) for i in range(50)], stream_name='test2')\n",
+    "\n",
+    "line_plot = LinePlot()\n",
+    "\n",
+    "\n",
+    "line_plot.subscribe(stream, ytitle='y1')\n",
+    "\n",
+    "line_plot.subscribe(stream2, ytitle='y2')\n",
+    "\n",
+    "line_plot.show()\n",
+    "\n",
+    "stream.load()\n",
+    "stream2.load()\n",
+    "\n"
    ]
   },
   {
@@ -35,9 +48,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "stream2 = tw.ArrayStream([(i, i*i*0.9) for i in range(50)])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -56,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4,
   "vscode": {
